include_directories("${CMAKE_CURRENT_BINARY_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/include")

add_library (cppfx ${cppfx_LIBRARY_TYPE}
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/common.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/exponential.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/ext.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/fwd.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/geometric.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/glm.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/integer.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat2x2.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat2x3.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat2x4.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat3x2.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat3x3.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat3x4.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat4x2.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat4x3.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat4x4.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/matrix.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/packing.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/trigonometric.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/vec2.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/vec3.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/vec4.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/vector_relational.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/_features.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/_fixes.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/_noise.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/_swizzle.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/_swizzle_func.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/_vectorize.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_common.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_common.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_exponential.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_exponential.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_geometric.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_geometric.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_integer.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_integer.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_matrix.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_matrix.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_noise.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_noise.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_packing.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_packing.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_trigonometric.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_trigonometric.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_vector_relational.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/func_vector_relational.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/intrinsic_common.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/intrinsic_common.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/intrinsic_exponential.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/intrinsic_exponential.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/intrinsic_geometric.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/intrinsic_geometric.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/intrinsic_integer.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/intrinsic_integer.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/intrinsic_matrix.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/intrinsic_matrix.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/intrinsic_trigonometric.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/intrinsic_trigonometric.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/intrinsic_vector_relational.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/intrinsic_vector_relational.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/precision.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/setup.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_float.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_gentype.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_gentype.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_half.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_half.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat2x2.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat2x2.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat2x3.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat2x3.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat2x4.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat2x4.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat3x2.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat3x2.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat3x3.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat3x3.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat3x4.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat3x4.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat4x2.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat4x2.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat4x3.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat4x3.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat4x4.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_mat4x4.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_vec.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_vec.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_vec1.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_vec1.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_vec2.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_vec2.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_vec3.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_vec3.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_vec4.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_vec4.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_vec4_avx.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_vec4_avx2.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/detail/type_vec4_sse2.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/bitfield.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/bitfield.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/color.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/color.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/constants.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/constants.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/epsilon.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/epsilon.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/integer.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/integer.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/matrix_access.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/matrix_access.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/matrix_integer.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/matrix_inverse.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/matrix_inverse.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/matrix_transform.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/matrix_transform.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/noise.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/noise.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/packing.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/packing.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/quaternion.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/quaternion.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/random.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/random.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/reciprocal.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/reciprocal.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/round.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/round.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/type_precision.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/type_precision.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/type_ptr.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/type_ptr.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/ulp.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/ulp.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/vec1.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/vec1.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/associated_min_max.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/associated_min_max.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/bit.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/bit.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/closest_point.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/closest_point.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/color_space.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/color_space.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/color_space_YCoCg.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/color_space_YCoCg.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/common.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/common.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/compatibility.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/compatibility.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/component_wise.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/component_wise.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/dual_quaternion.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/dual_quaternion.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/euler_angles.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/euler_angles.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/extend.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/extend.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/extented_min_max.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/extented_min_max.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_exponential.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_exponential.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_square_root.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_square_root.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_trigonometry.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_trigonometry.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/gradient_paint.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/gradient_paint.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/handed_coordinate_space.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/handed_coordinate_space.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/hash.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/hash.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/integer.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/integer.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/intersect.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/intersect.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/io.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/io.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/log_base.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/log_base.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_cross_product.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_cross_product.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_decompose.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_decompose.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_interpolation.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_interpolation.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_major_storage.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_major_storage.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_operation.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_operation.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_query.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_query.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_transform_2d.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_transform_2d.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/mixed_product.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/mixed_product.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/multiple.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/multiple.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/norm.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/norm.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/normal.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/normal.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/normalize_dot.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/normalize_dot.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/number_precision.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/number_precision.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/optimum_pow.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/optimum_pow.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/orthonormalize.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/orthonormalize.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/perpendicular.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/perpendicular.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/polar_coordinates.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/polar_coordinates.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/projection.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/projection.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/quaternion.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/quaternion.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/range.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/raw_data.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/raw_data.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/rotate_normalized_axis.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/rotate_normalized_axis.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/rotate_vector.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/rotate_vector.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/scalar_multiplication.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/scalar_relational.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/scalar_relational.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_mat4.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_mat4.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_quat.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_quat.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_vec4.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_vec4.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/spline.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/spline.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/std_based_type.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/std_based_type.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/string_cast.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/string_cast.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/transform.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/transform.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/transform2.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/transform2.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/type_aligned.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/type_aligned.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/vector_angle.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/vector_angle.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/vector_query.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/vector_query.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/wrap.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/wrap.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/cppfx.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/DeleteHandler.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/matrix.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/mutex.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/Object.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/Observer.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/rapidxml.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/rapidxml_iterators.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/ref_ptr.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/Referenced.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/string.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/Time.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/vector.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/WeakMap.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/Xml.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/weak_ptr.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/platform/Event.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/platform/Window.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/input/Enums.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/Enums.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/BmpTextureLoader.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/Buffer.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/Context.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/ITextureLoader.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/Shader.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/ShaderProgram.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/ShaderProgramParameter.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/Texture.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/Texture2D.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/VertexArray.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/VertexArrayElement.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/Enums.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/BitmapFont.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/GuiEvent.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/GuiShader.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/LabelWidget.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/SpriteBatch.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/SpriteCollection.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/SpriteSheet.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/SpriteVertex.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/SpriteWidget.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/Widget.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/WidgetManager.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/BodyElement.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/BodyElementFactory.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/Document.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/Element.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/HeadElement.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/HeadElementFactory.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/IElementFactory.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/LabelElement.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/LabelElementFactory.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/LinkElement.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/LinkElementFactory.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/SpriteElement.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/SpriteElementFactory.h"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/cppfx.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/DeleteHandler.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/mutex.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/Observer.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/Referenced.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/Time.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/vector.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/graphics/Context.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/graphics/BmpTextureLoader.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/graphics/Buffer.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/graphics/ITextureLoader.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/graphics/Shader.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/graphics/ShaderProgram.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/graphics/ShaderProgramParameter.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/graphics/Texture.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/graphics/Texture2D.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/graphics/VertexArray.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/graphics/VertexArrayElement.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/graphics/Window.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/BitmapFont.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/BitmapFontReaderBinary.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/BitmapFontReaderText.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/BitmapFontReaderXml.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/GuiShader.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/LabelWidget.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/SpriteBatch.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/SpriteBatchSprite.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/SpriteCollection.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/SpriteSheet.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/SpriteVertex.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/SpriteWidget.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/Widget.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/WidgetManager.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/elements/BodyElement.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/elements/BodyElementFactory.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/elements/Document.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/elements/Element.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/elements/HeadElement.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/elements/HeadElementFactory.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/elements/IElementFactory.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/elements/LabelElement.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/elements/LabelElementFactory.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/elements/LinkElement.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/elements/LinkElementFactory.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/elements/SpriteElement.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/gui/elements/SpriteElementFactory.cpp"
)

if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
    execute_process(
        COMMAND ${CMAKE_CXX_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
    if (NOT (GCC_VERSION VERSION_GREATER 4.7 OR GCC_VERSION VERSION_EQUAL 4.7))
        message(FATAL_ERROR "${PROJECT_NAME} requires g++ 4.7 or greater.")
    endif ()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
endif()

set(DEPENDENCIES "${OPENGL_LIBRARIES}")

set(SDL_BUILDING_LIBRARY TRUE)
find_package(SDL)

if(SDL_FOUND)
	set(CPPFX_USE_SDL 1)
	include_directories("${SDL_INCLUDE_DIR}")
	set(DEPENDENCIES ${DEPENDENCIES} ${SDL_LIBRARY})
else()
	if(GLFW_FOUND)
		set(CPPFX_USE_GLFW 1)
		if(WIN32)
			if(NOT GLFW_STATIC)
				add_definitions(-DGLFW_DLL)
			endif()
		endif()
		include_directories("${GLFW_INCLUDE_DIR}")
		set(DEPENDENCIES "${DEPENDENCIES}" "${GLFW_LIBRARIES}")
	else()
		message(FATAL_ERROR, "Require either SDL or GLFW")
	endif()
endif()

if(GLEW_FOUND)
	set(CPPFX_USE_GLEW 1)
	if(GLEW_STATIC)
		add_definitions(-DGLEW_STATIC)
	endif()
	include_directories("${GLEW_INCLUDE_DIR}")
	set(DEPENDENCIES "${DEPENDENCIES}" "${GLEW_LIBRARIES}")
endif()

configure_file(
	"${CMAKE_CURRENT_SOURCE_DIR}/config.h.in"
	"${CMAKE_CURRENT_BINARY_DIR}/cppfx/config.h"
)

target_include_directories (cppfx PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")

GENERATE_EXPORT_HEADER(cppfx
	BASE_NAME CPPFX
	EXPORT_MACRO_NAME CPPFX_API
	EXPORT_FILE_NAME "${CMAKE_CURRENT_BINARY_DIR}/cppfx/export.h"
	STATIC_DEFINE CPPFX_STATIC
)

#target_link_libraries(cppfx ${SDL_LIBRARY} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES})
target_link_libraries(cppfx "${DEPENDENCIES}")


install (TARGETS cppfx DESTINATION lib)
install (TARGETS cppfx DESTINATION bin)
install (
	FILES 
		"${CMAKE_CURRENT_BINARY_DIR}/cppfx/config.h"
		"${CMAKE_CURRENT_BINARY_DIR}/cppfx/export.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/cppfx.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/DeleteHandler.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/matrix.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/mutex.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/Object.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/Observer.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/rapidxml.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/rapidxml_iterators.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/ref_ptr.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/Referenced.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/string.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/Time.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/vector.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/WeakMap.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/Xml.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/weak_ptr.h"
	DESTINATION include/cppfx
)
install(
	FILES
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/platform/Event.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/platform/Window.h"
	DESTINATION include/cppfx/platform
)
install(
	FILES
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/input/Enums.h"
	DESTINATION include/cppfx/input
)
install(
	FILES
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/Enums.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/BmpTextureLoader.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/Buffer.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/Context.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/ITextureLoader.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/Shader.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/ShaderProgram.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/ShaderProgramParameter.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/Texture.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/Texture2D.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/VertexArray.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/graphics/VertexArrayElement.h"
	DESTINATION include/cppfx/graphics
)
install(
	FILES
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/Enums.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/BitmapFont.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/GuiEvent.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/GuiShader.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/LabelWidget.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/SpriteBatch.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/SpriteCollection.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/SpriteSheet.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/SpriteVertex.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/SpriteWidget.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/Widget.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/WidgetManager.h"
	DESTINATION include/cppfx/gui
)
install(
	FILES
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/BodyElement.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/BodyElementFactory.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/Document.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/Element.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/HeadElement.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/HeadElementFactory.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/IElementFactory.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/LabelElement.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/LabelElementFactory.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/LinkElement.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/LinkElementFactory.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/SpriteElement.h"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/cppfx/gui/elements/SpriteElementFactory.h"
	DESTINATION include/cppfx/gui/elements
)
install (
	FILES
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/common.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/exponential.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/ext.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/fwd.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/geometric.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/glm.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/integer.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat2x2.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat2x3.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat2x4.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat3x2.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat3x3.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat3x4.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat4x2.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat4x3.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/mat4x4.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/matrix.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/packing.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/trigonometric.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/vec2.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/vec3.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/vec4.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/vector_relational.hpp"
	DESTINATION include/glm
)
install(
	FILES
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/associated_min_max.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/associated_min_max.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/bit.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/bit.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/closest_point.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/closest_point.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/color_space.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/color_space.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/color_space_YCoCg.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/color_space_YCoCg.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/common.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/common.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/compatibility.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/compatibility.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/component_wise.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/component_wise.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/dual_quaternion.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/dual_quaternion.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/euler_angles.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/euler_angles.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/extend.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/extend.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/extented_min_max.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/extented_min_max.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_exponential.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_exponential.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_square_root.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_square_root.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_trigonometry.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_trigonometry.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/gradient_paint.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/gradient_paint.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/handed_coordinate_space.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/handed_coordinate_space.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/hash.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/hash.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/integer.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/integer.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/intersect.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/intersect.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/io.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/io.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/log_base.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/log_base.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_cross_product.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_cross_product.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_decompose.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_decompose.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_interpolation.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_interpolation.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_major_storage.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_major_storage.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_operation.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_operation.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_query.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_query.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_transform_2d.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_transform_2d.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/mixed_product.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/mixed_product.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/multiple.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/multiple.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/norm.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/norm.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/normal.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/normal.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/normalize_dot.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/normalize_dot.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/number_precision.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/number_precision.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/optimum_pow.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/optimum_pow.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/orthonormalize.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/orthonormalize.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/perpendicular.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/perpendicular.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/polar_coordinates.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/polar_coordinates.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/projection.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/projection.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/quaternion.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/quaternion.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/range.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/raw_data.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/raw_data.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/rotate_normalized_axis.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/rotate_normalized_axis.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/rotate_vector.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/rotate_vector.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/scalar_multiplication.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/scalar_relational.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/scalar_relational.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_mat4.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_mat4.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_quat.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_quat.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_vec4.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_vec4.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/spline.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/spline.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/std_based_type.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/std_based_type.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/string_cast.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/string_cast.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/transform.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/transform.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/transform2.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/transform2.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/type_aligned.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/type_aligned.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/vector_angle.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/vector_angle.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/vector_query.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/vector_query.inl"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/wrap.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/wrap.inl"
	DESTINATION include/glm/detail
)
install(
	FILES
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/bitfield.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/bitfield.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/color.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/color.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/constants.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/constants.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/epsilon.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/epsilon.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/integer.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/integer.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/matrix_access.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/matrix_access.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/matrix_integer.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/matrix_inverse.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/matrix_inverse.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/matrix_transform.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/matrix_transform.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/noise.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/noise.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/packing.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/packing.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/quaternion.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/quaternion.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/random.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/random.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/reciprocal.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/reciprocal.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/round.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/round.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/type_precision.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/type_precision.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/type_ptr.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/type_ptr.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/ulp.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/ulp.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/vec1.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtc/vec1.inl"
	DESTINATION include/glm/gtc
)
install(
	FILES
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/associated_min_max.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/associated_min_max.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/bit.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/bit.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/closest_point.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/closest_point.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/color_space.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/color_space.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/color_space_YCoCg.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/color_space_YCoCg.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/common.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/common.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/compatibility.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/compatibility.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/component_wise.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/component_wise.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/dual_quaternion.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/dual_quaternion.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/euler_angles.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/euler_angles.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/extend.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/extend.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/extented_min_max.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/extented_min_max.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_exponential.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_exponential.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_square_root.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_square_root.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_trigonometry.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/fast_trigonometry.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/gradient_paint.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/gradient_paint.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/handed_coordinate_space.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/handed_coordinate_space.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/hash.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/hash.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/integer.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/integer.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/intersect.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/intersect.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/io.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/io.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/log_base.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/log_base.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_cross_product.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_cross_product.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_decompose.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_decompose.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_interpolation.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_interpolation.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_major_storage.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_major_storage.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_operation.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_operation.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_query.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_query.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_transform_2d.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/matrix_transform_2d.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/mixed_product.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/mixed_product.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/multiple.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/multiple.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/norm.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/norm.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/normal.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/normal.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/normalize_dot.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/normalize_dot.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/number_precision.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/number_precision.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/optimum_pow.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/optimum_pow.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/orthonormalize.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/orthonormalize.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/perpendicular.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/perpendicular.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/polar_coordinates.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/polar_coordinates.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/projection.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/projection.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/quaternion.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/quaternion.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/range.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/raw_data.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/raw_data.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/rotate_normalized_axis.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/rotate_normalized_axis.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/rotate_vector.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/rotate_vector.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/scalar_multiplication.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/scalar_relational.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/scalar_relational.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_mat4.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_mat4.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_quat.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_quat.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_vec4.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/simd_vec4.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/spline.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/spline.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/std_based_type.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/std_based_type.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/string_cast.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/string_cast.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/transform.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/transform.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/transform2.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/transform2.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/type_aligned.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/type_aligned.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/vector_angle.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/vector_angle.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/vector_query.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/vector_query.inl"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/wrap.hpp"
		"${CMAKE_CURRENT_SOURCE_DIR}/include/glm/gtx/wrap.inl"
	DESTINATION include/glm/gtx
)
